--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
+  "name": "gadjet_v2",
+  "version": "1.0.0",
+  "description": "MERN-Shoppin-App",
+  "main": "server.js",
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-cors": "^6.0.3",
     "fastify-env": "^2.1.1",
@@ -10,14 +17,13 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1"
   },
-  "name": "gadjet_v2",
-  "version": "1.0.0",
-  "description": "MERN-Shoppin-App",
-  "main": "server.js",
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server",
+    "server": "nodemon backend/server"
   },
   "author": "Abayomi",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
